apps/objects/argocd/httproute-webhook.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-webhook
  namespace: argocd
spec:
  parentRefs:
    - name: cloudflare-tunnel
      namespace: cloudflare-gateway
  hostnames:
    - argocd-webhook.bhyoo.com
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/webhook
      backendRefs:
        - name: argocd-server
          port: 80
